# SSE-Auto-Translator

./: .gitignore  .gitmodules  Changelog.md  LICENSE  README.md  SSE-Auto-Translator-v3.code-workspace  SSE-Auto-Translator.code-workspace  build.py  changelog.txt  mypy.ini  pyproject.toml  requirements.txt  run.bat  update.json  update_lupdate_file.bat  versioninfo.txt
StringMerger/: CMakeLists.txt  CMakePresets.json  README  vcpkg.json
StringMerger/src/: main.cpp
doc/: Instructions_en_US.html  Instructions_en_US.md
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
masterlists/: german.json  index.json
res/: ext_resources.json  resources.qrc  skyrimse.json  style.qss
res/PhoenixEngine/: PhoenixEngineR.dll.config
res/app/: config.json  style.qss
res/loc/: de_DE.qm  de_DE.ts  ru_RU.ts  zh_CN.ts
res/locales/de_DE/: api_setup.json  blacklist.json  errors.json  settings.json  startup_dialog.json
res/locales/en_US/: api_setup.json  database.json  main.json  main_page.json  settings.json  updater.json
res/locales/ru_RU/: database.json  main.json  startup_dialog.json
res/locales/zh_CN/: api_setup.json  editor.json  errors.json  main.json  main_page.json
res/translator/: config.json
res/user/: config.json
scripts/: build.py  check_file_length.py  dump_http_response.py  dump_leveldb_to_json.py  gen_vanilla_db.py  nuitka_test.py  open_url_test.py  view_json_file.py
src/: app.py  app_context.py  main.py  main_page.py  nxm_handler.py  processor.py  string_extractor.py  structure_viewer.py
src/archive_parser/: archive.py  archive_parser.py  datatypes.py  file_name_block.py  file_record.py
src/archiver/: archive.py  rar.py  sevenzip.py  zip.py
src/cacher/: __init__.py  cacher.py
src/cdt_api/: __init__.py  api.py
src/core/: component_provider.py  processor.py
src/core/archive_parser/: __init__.py  archive.py  archive_parser.py  datatypes.py  file_name_block.py  file_record.py  folder_record.py  header.py
src/core/archiver/: __init__.py  archive.py  rar.py  sevenzip.py  zip.py
src/core/cache/: base_cache.py  cache.py  function_cache.py
src/core/cacher/: cacher.py
src/core/config/: _base_config.py  app_config.py  translator_config.py  user_config.py
src/core/database/: __init__.py  database.py  database_service.py  exporter.py  importer.py  search_filter.py  string.py  translation.py  translation_service.py  utilities.py
src/core/downloader/: download_list.py  download_manager.py  downloader.py  file_download.py  mod_info.py  translation_download.py  worker.py
src/core/editor/: editor.py
src/core/file_source/: archive_file_source.py  bsa_file_source.py  file_source.py  local_file_source.py
src/core/file_types/: file_type.py
src/core/masterlist/: masterlist.py  masterlist_entry.py  route_target.py
src/core/mod_file/: __init__.py  interface_file.py  mod_file.py  mod_file_service.py  plugin_file.py  translation_status.py
src/core/mod_instance/: mod.py  mod_file.py  mod_instance.py  mod_instance_loader.py  plugin.py  state_service.py
src/core/mod_managers/: __init__.py  exceptions.py  instance_info.py  mod_manager.py  mod_manager_api.py  modorganizer.py  vortex.py
src/core/plugin_interface/: __init__.py  datatypes.py  flags.py  group.py  plugin.py  record.py  subrecord.py  utilities.py
src/core/scanner/: detector.py  scanner.py
src/core/string/: __init__.py  base_string.py  interface_string.py  legacy_string.py  plugin_string.py  search_filter.py  string_extractor.py  string_loader.py  string_status.py  string_utils.py  types.py
src/core/string_table_parser/: datatypes.py  directory_entry.py  string_table.py  string_table_parser.py  utilities.py
src/core/translation_provider/: __init__.py  base_mod_id.py  downloader.py  exceptions.py  file_download.py  mod_details.py  mod_id.py  provider.py  provider_api.py  provider_manager.py  provider_preference.py  source.py  translation_download.py
src/core/translator/: apis.py  deepl.py  google.py  service.py  translator.py
src/core/translator_api/: __init__.py  deepl.py  (+4 more)
src/database/: __init__.py  database.py  database_widget.py  downloads_widget.py  translation.py  translations_widget.py
src/mod_managers/: mod_manager.py  modorganizer.py  vortex.py
src/nm_api/: __init__.py  api.py  download.py  downloader.py
src/plugin_interface/: flags.py  plugin.py  record.py  subrecord.py  utilities.py
src/plugin_parser/: __init__.py  datatypes.py  group.py  plugin.py  plugin_parser.py  record.py  subrecord.py  utilities.py
src/settings/: __init__.py  app_settings.py  blacklist_dialog.py  settings_dialog.py  translator_settings.py  user_settings.py
src/startup_dialog/: __init__.py  instance_page.py  introduction.py  setup_page.py  startup_dialog.py
src/translation_editor/: __init__.py  editor.py  editor_tab.py  translator_dialog.py
src/translation_provider/: __init__.py  downloader.py  file_download.py  provider.py  translation_download.py
src/translator_api/: __init__.py  deepl.py  google.py  translator.py
src/ui/: main_page.py  main_window.py  menubar.py  statusbar.py  toast_notifier.py
src/updater/: __init__.py  updater.py  updater_dialog.py
src/utilities/: __init__.py  constants.py  detector.py  download.py  exceptions.py  importer.py  ini_parser.py  leveldb.py  licenses.py  localisation.py  mod.py  nxm_listener.py  plugin.py  plugin_loader.py  source.py  stdout_pipe.py  string.py  thread.py  types.py  utility.py  vortex_db.py
src/widgets/: __init__.py  api_setup.py  clear_entry.py  completion_box.py  copy_entry.py  download_list.py  download_list_dialog.py  download_list_item.py  error_dialog.py  ignore_list_dialog.py  key_entry.py  loading_dialog.py  menu.py  paste_entry.py  progress_widget.py  search_bar.py  shortcut_button.py  spell_check_entry.py  stacked_bar.py  stacked_widget.py  string_list_dialog.py  toast.py
tests/: __init__.py  app_test.py  base_test.py  test_app.py  utils.py
tests/core/: core_test.py
tests/data/: Wet and Cold SE - German.7z  state.v2.json
tests/setup/: sync_executor.py
tests/ui/: base_test.py  test_main_window.py  ui_test.py
(+2606 files in other folders)
