[project]
name = "sse-auto-translator"
version = "3.0.0-alpha-1"
description = "SSE Auto Translator"
license = { file = "LICENSE" }
authors = [{ name = "Cutleast", email = "cutleast@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "cloudscraper",
    "comtypes",
    "deepl",
    "googletrans==3.1.0a0",
    "jstyleson",
    "lingua-language-detector",
    "lz4",
    "plyvel-ci",
    "py7zr",
    "pydantic",
    "pyside6",
    "pytz",
    "pyuac",
    "pywin32",
    "pyzmq",
    "qtawesome",
    "qtpy",
    "rarfile",
    "requests",
    "semantic-version",
    "spylls",
    "sse-bsa",
    "unrar",
    "virtual-glob",
    "websocket-client",
]

[dependency-groups]
dev = [
    "nuitka",
    "pyright",
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "ruff",
    "types-requests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "[%(asctime)s.%(msecs)03d][%(levelname)s][%(name)s.%(funcName)s]: %(message)s"

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
exclude = ["**/__pycache__", "**/*.old"]
stubPath = "./stubs"

# Check here for a full list of options: https://github.com/microsoft/pyright/blob/main/docs/configuration.md#diagnostic-settings-defaults
deprecateTypingAliases = false
reportImplicitOverride = "warning"
reportMatchNotExhaustive = false
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportPropertyTypeMismatch = "warning"
reportShadowedImports = "warning"
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryCast = "information"
reportUnnecessaryComparison = "information"
reportUnnecessaryContains = "information"
reportUnnecessaryIsInstance = "information"
reportUnnecessaryTypeIgnoreComment = "information"
reportUnusedClass = "warning"
reportUnusedImport = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
